fix(user): fix username and nickname display on mobile view

--- a/src/pages/user/user/UserPage.module.less
+++ b/src/pages/user/user/UserPage.module.less
@@ -20,6 +20,17 @@
   }
 }
 
+.nickname {
+  margin-bottom: -13px !important;
+}
+
+.username {
+  margin-top: 14px !important;
+  margin-bottom: 14px !important;
+  font-size: 1.538em;
+  color: #666;
+}
+
 @media only screen and (min-width: 768px) {
   .nickname {
     margin-top: 20px !important;
@@ -29,8 +40,6 @@
   .username {
     margin-top: 20px !important;
     margin-bottom: 16px !important;
-    font-size: 1.538em;
-    color: #666;
   }
 
   .bio {
